--- a/reportes/r_papeleta_permiso2.jrxml
+++ b/reportes/r_papeleta_permiso2.jrxml
@@ -81,7 +81,7 @@ permiso.id = $P{permiso_id} AND asignacion_permiso.empleado_nro_documento = $P{e
 				<textElement verticalAlignment="Middle">
 					<font fontName="SansSerif" size="16" isBold="true"/>
 				</textElement>
-				<text><![CDATA[M.P. SAN MARCOS - PAPELETA DE PERMISO]]></text>
+				<text><![CDATA[ENSA - PAPELETA DE PERMISO]]></text>
 			</staticText>
 		</band>
 	</title>
