--- a/reportes/reporte_registro_asistencia_caliente.jrxml
+++ b/reportes/reporte_registro_asistencia_caliente.jrxml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="r_registro_asistencia_grupo_2" pageWidth="595" pageHeight="842" columnWidth="585" leftMargin="5" rightMargin="5" topMargin="5" bottomMargin="5" uuid="2351c35a-4e16-4c1c-aaf5-8e900d7ae54e">
 	<property name="ireport.zoom" value="4.0"/>
-	<property name="ireport.x" value="450"/>
-	<property name="ireport.y" value="0"/>
+	<property name="ireport.x" value="0"/>
+	<property name="ireport.y" value="33"/>
 	<parameter name="usuario" class="java.lang.String">
 		<defaultValueExpression><![CDATA["admin"]]></defaultValueExpression>
 	</parameter>
@@ -21,6 +21,8 @@
 	<parameter name="MOSTRAR_TITULO" class="java.lang.Boolean">
 		<defaultValueExpression><![CDATA[true]]></defaultValueExpression>
 	</parameter>
+	<parameter name="reporte_institucion" class="java.lang.String"/>
+	<parameter name="reporte_usuario" class="java.lang.String"/>
 	<queryString>
 		<![CDATA[]]>
 	</queryString>
@@ -36,22 +38,51 @@
 	<field name="minutosTardanza" class="java.lang.Integer"/>
 	<field name="minutosExtra" class="java.lang.Integer"/>
 	<field name="fecha" class="java.util.Date"/>
+	<field name="contrato.regimenLaboral.nombre" class="java.lang.String"/>
+	<group name="grp_nombre" isStartNewPage="true" isReprintHeaderOnEachPage="true">
+		<groupExpression><![CDATA[$F{empleado.fichaLaboral.regimenLaboral.nombre}]]></groupExpression>
+		<groupHeader>
+			<band height="20">
+				<staticText>
+					<reportElement mode="Opaque" x="0" y="0" width="100" height="20" forecolor="#000000" backcolor="#C8C8C8" uuid="12019ce1-0770-4903-b3ee-c7be70385102"/>
+					<box leftPadding="5">
+						<pen lineColor="#000000"/>
+						<topPen lineWidth="0.5" lineColor="#000000"/>
+						<leftPen lineWidth="0.5" lineColor="#000000"/>
+						<bottomPen lineWidth="0.5" lineColor="#000000"/>
+						<rightPen lineWidth="0.5" lineColor="#000000"/>
+					</box>
+					<textElement verticalAlignment="Middle">
+						<font fontName="SansSerif" size="7" isBold="true"/>
+					</textElement>
+					<text><![CDATA[RÉGIMEN LABORAL:]]></text>
+				</staticText>
+				<textField pattern="">
+					<reportElement x="100" y="0" width="462" height="20" uuid="16e7f0ed-a55b-4637-852a-369a801ec620"/>
+					<box leftPadding="5">
+						<pen lineColor="#000000"/>
+						<topPen lineWidth="0.5" lineColor="#000000"/>
+						<leftPen lineWidth="0.5" lineColor="#000000"/>
+						<bottomPen lineWidth="0.5" lineColor="#000000"/>
+						<rightPen lineWidth="0.5" lineColor="#000000"/>
+					</box>
+					<textElement verticalAlignment="Middle">
+						<font fontName="SansSerif" size="7"/>
+					</textElement>
+					<textFieldExpression><![CDATA[$F{empleado.fichaLaboral.regimenLaboral.nombre} == null
+? "SIN ASIGNAR" : $F{empleado.fichaLaboral.regimenLaboral.nombre}]]></textFieldExpression>
+				</textField>
+			</band>
+		</groupHeader>
+	</group>
 	<background>
 		<band splitType="Stretch"/>
 	</background>
 	<title>
-		<band height="81">
+		<band height="108">
 			<printWhenExpression><![CDATA[$P{MOSTRAR_TITULO}]]></printWhenExpression>
-			<staticText>
-				<reportElement x="0" y="0" width="585" height="30" forecolor="#666666" backcolor="#FFFFFF" uuid="c7fc26d9-5dcf-4cad-b084-87e2964bffdc"/>
-				<box leftPadding="3"/>
-				<textElement textAlignment="Center" verticalAlignment="Middle">
-					<font fontName="SansSerif" size="14" isBold="true"/>
-				</textElement>
-				<text><![CDATA[REPORTE DE ASISTENCIA DETALLADO]]></text>
-			</staticText>
 			<textField pattern="dd/MM/yyyy">
-				<reportElement isPrintRepeatedValues="false" x="0" y="30" width="279" height="25" forecolor="#666666" uuid="f09ed0e8-b25b-41c5-8f02-2f977616d088">
+				<reportElement isPrintRepeatedValues="false" x="100" y="79" width="279" height="21" forecolor="#000000" uuid="f09ed0e8-b25b-41c5-8f02-2f977616d088">
 					<printWhenExpression><![CDATA[$P{mostrar_he} == false]]></printWhenExpression>
 				</reportElement>
 				<box leftPadding="0" rightPadding="3">
@@ -62,49 +93,72 @@
 					<rightPen lineWidth="0.0" lineColor="#000000"/>
 				</box>
 				<textElement verticalAlignment="Middle">
-					<font fontName="SansSerif" size="14" isBold="true"/>
+					<font fontName="SansSerif" size="12" isBold="false"/>
 				</textElement>
-				<textFieldExpression><![CDATA[String.format("%s %s",$P{rangoTitulo},$P{rangoValor})]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$P{rangoValor}]]></textFieldExpression>
 			</textField>
-			<frame>
-				<reportElement mode="Opaque" x="0" y="61" width="585" height="20" forecolor="#000000" backcolor="#660000" uuid="2bec6649-5b22-4d69-802c-fd5d325f9a91"/>
-				<box>
-					<topPen lineWidth="0.5"/>
-					<leftPen lineWidth="0.5"/>
-					<bottomPen lineWidth="0.5"/>
-					<rightPen lineWidth="0.5"/>
-				</box>
-				<textField>
-					<reportElement x="373" y="0" width="212" height="20" forecolor="#CCCCCC" uuid="17a2b085-6ebe-4931-a179-7e36baf072cd"/>
-					<box rightPadding="3"/>
-					<textElement textAlignment="Right" verticalAlignment="Middle">
-						<font fontName="SansSerif" size="7" isBold="true"/>
-					</textElement>
-					<textFieldExpression><![CDATA["Usuario: "+$P{usuario}]]></textFieldExpression>
-				</textField>
-			</frame>
 			<staticText>
-				<reportElement x="0" y="61" width="74" height="20" forecolor="#CCCCCC" uuid="9ccbe8de-bde3-42bc-b204-a6ae44f8273d"/>
-				<box leftPadding="3"/>
+				<reportElement x="0" y="0" width="259" height="20" uuid="b9e02bd1-8c4a-42b1-9d0c-ac9265e4563d"/>
 				<textElement verticalAlignment="Middle">
-					<font fontName="SansSerif" size="7" isBold="true"/>
+					<font size="12" isBold="true"/>
 				</textElement>
-				<text><![CDATA[Fecha y hora de imp:]]></text>
+				<text><![CDATA[REPORTE GENERAL DE ASISTENCIA]]></text>
 			</staticText>
-			<textField pattern="dd/MM/yyyy HH:mm:ss">
-				<reportElement x="74" y="61" width="169" height="20" forecolor="#CCCCCC" uuid="7317a692-9371-400b-974f-884471f869db"/>
-				<box leftPadding="3"/>
+			<staticText>
+				<reportElement x="0" y="40" width="100" height="20" uuid="2b154131-53fb-4edd-9f99-66c9e169202c"/>
 				<textElement verticalAlignment="Middle">
-					<font fontName="SansSerif" size="7" isBold="true"/>
+					<font size="12" isBold="true"/>
+				</textElement>
+				<text><![CDATA[FECHA Y HORA:]]></text>
+			</staticText>
+			<textField>
+				<reportElement x="100" y="20" width="259" height="20" uuid="bd77b8ce-73fe-48f0-95e5-789a32065b74"/>
+				<textElement verticalAlignment="Middle">
+					<font size="12"/>
+				</textElement>
+				<textFieldExpression><![CDATA[$P{reporte_institucion}]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement x="100" y="60" width="259" height="20" uuid="bd207f98-8c70-4f59-992f-b10c567167fe"/>
+				<textElement verticalAlignment="Middle">
+					<font size="12"/>
+				</textElement>
+				<textFieldExpression><![CDATA[$P{reporte_usuario}]]></textFieldExpression>
+			</textField>
+			<textField pattern="dd.MM.yyyy HH:mm:ss">
+				<reportElement x="100" y="40" width="259" height="20" uuid="9979daf7-b1d2-447c-b3ff-ab6cd007208d"/>
+				<textElement verticalAlignment="Middle">
+					<font size="12"/>
 				</textElement>
 				<textFieldExpression><![CDATA[new java.util.Date()]]></textFieldExpression>
 			</textField>
+			<staticText>
+				<reportElement x="0" y="60" width="100" height="20" uuid="8e92f96c-d1b7-4847-8bd8-d1811dfff931"/>
+				<textElement verticalAlignment="Middle">
+					<font size="12" isBold="true"/>
+				</textElement>
+				<text><![CDATA[USUARIO:]]></text>
+			</staticText>
+			<staticText>
+				<reportElement x="0" y="20" width="100" height="20" uuid="a95e2043-bf1b-4661-9164-025f6c511493"/>
+				<textElement verticalAlignment="Middle">
+					<font size="12" isBold="true"/>
+				</textElement>
+				<text><![CDATA[INSTITUCIÓN:]]></text>
+			</staticText>
+			<staticText>
+				<reportElement x="0" y="80" width="100" height="20" uuid="99f8b0c0-5608-42ac-94af-66ce2bb7d9ab"/>
+				<textElement verticalAlignment="Middle">
+					<font size="12" isBold="true"/>
+				</textElement>
+				<text><![CDATA[FECHAS:]]></text>
+			</staticText>
 		</band>
 	</title>
 	<columnHeader>
 		<band height="20">
 			<staticText>
-				<reportElement mode="Transparent" x="232" y="0" width="47" height="20" forecolor="#000000" backcolor="#3399FF" uuid="175f6a50-184f-4af5-8756-7c10937c355e"/>
+				<reportElement mode="Opaque" x="209" y="0" width="47" height="20" forecolor="#000000" backcolor="#C8C8C8" uuid="175f6a50-184f-4af5-8756-7c10937c355e"/>
 				<box>
 					<pen lineColor="#000000"/>
 					<topPen lineWidth="0.5" lineColor="#000000"/>
@@ -118,7 +172,7 @@
 				<text><![CDATA[FECHA]]></text>
 			</staticText>
 			<staticText>
-				<reportElement mode="Transparent" x="410" y="0" width="51" height="20" isRemoveLineWhenBlank="true" forecolor="#000000" backcolor="#3399FF" uuid="6aced933-9789-4eba-bd0b-62c58ba59d7f"/>
+				<reportElement mode="Opaque" x="387" y="0" width="51" height="20" isRemoveLineWhenBlank="true" forecolor="#000000" backcolor="#C8C8C8" uuid="6aced933-9789-4eba-bd0b-62c58ba59d7f"/>
 				<box>
 					<pen lineColor="#000000"/>
 					<topPen lineWidth="0.5" lineColor="#000000"/>
@@ -132,7 +186,7 @@
 				<text><![CDATA[REG. ENT.]]></text>
 			</staticText>
 			<staticText>
-				<reportElement mode="Transparent" x="461" y="0" width="51" height="20" forecolor="#000000" backcolor="#3399FF" uuid="05c1fd12-b701-40b4-a2bd-80614fa624c5"/>
+				<reportElement mode="Opaque" x="438" y="0" width="51" height="20" forecolor="#000000" backcolor="#C8C8C8" uuid="05c1fd12-b701-40b4-a2bd-80614fa624c5"/>
 				<box>
 					<pen lineColor="#000000"/>
 					<topPen lineWidth="0.5" lineColor="#000000"/>
@@ -146,7 +200,7 @@
 				<text><![CDATA[REG. SALIDA]]></text>
 			</staticText>
 			<staticText>
-				<reportElement mode="Transparent" x="512" y="0" width="36" height="20" forecolor="#000000" backcolor="#3399FF" uuid="b2aa6434-888b-451b-873d-9e27e089b1a4"/>
+				<reportElement mode="Opaque" x="489" y="0" width="36" height="20" forecolor="#000000" backcolor="#C8C8C8" uuid="b2aa6434-888b-451b-873d-9e27e089b1a4"/>
 				<box>
 					<pen lineColor="#000000"/>
 					<topPen lineWidth="0.5" lineColor="#000000"/>
@@ -160,7 +214,7 @@
 				<text><![CDATA[TARD.]]></text>
 			</staticText>
 			<staticText>
-				<reportElement mode="Transparent" x="548" y="0" width="37" height="20" forecolor="#000000" backcolor="#3399FF" uuid="14815c6d-ee1e-452b-aefe-c1ae3b4528b4">
+				<reportElement mode="Opaque" x="525" y="0" width="37" height="20" forecolor="#000000" backcolor="#C8C8C8" uuid="14815c6d-ee1e-452b-aefe-c1ae3b4528b4">
 					<printWhenExpression><![CDATA[$P{mostrar_he}]]></printWhenExpression>
 				</reportElement>
 				<box>
@@ -176,7 +230,7 @@
 				<text><![CDATA[EXTRA]]></text>
 			</staticText>
 			<staticText>
-				<reportElement mode="Transparent" x="279" y="0" width="80" height="20" forecolor="#000000" backcolor="#3399FF" uuid="f21fcebd-502f-45c0-b61b-9c656f81b4ac"/>
+				<reportElement mode="Opaque" x="256" y="0" width="80" height="20" forecolor="#000000" backcolor="#C8C8C8" uuid="f21fcebd-502f-45c0-b61b-9c656f81b4ac"/>
 				<box>
 					<pen lineColor="#000000"/>
 					<topPen lineWidth="0.5" lineColor="#000000"/>
@@ -190,7 +244,7 @@
 				<text><![CDATA[ASISTENCIA]]></text>
 			</staticText>
 			<staticText>
-				<reportElement mode="Transparent" x="0" y="0" width="53" height="20" forecolor="#000000" backcolor="#3399FF" uuid="4e48b292-ff82-441a-a140-5ef6abca64b2"/>
+				<reportElement mode="Opaque" x="0" y="0" width="53" height="20" forecolor="#000000" backcolor="#C8C8C8" uuid="4e48b292-ff82-441a-a140-5ef6abca64b2"/>
 				<box>
 					<pen lineColor="#000000"/>
 					<topPen lineWidth="0.5" lineColor="#000000"/>
@@ -204,7 +258,7 @@
 				<text><![CDATA[DNI / C.E.]]></text>
 			</staticText>
 			<staticText>
-				<reportElement mode="Transparent" x="53" y="0" width="179" height="20" forecolor="#000000" backcolor="#3399FF" uuid="0c9ae388-2ad6-4f9a-91e9-8c32a5ea7ffc"/>
+				<reportElement mode="Opaque" x="53" y="0" width="156" height="20" forecolor="#000000" backcolor="#C8C8C8" uuid="0c9ae388-2ad6-4f9a-91e9-8c32a5ea7ffc"/>
 				<box>
 					<pen lineColor="#000000"/>
 					<topPen lineWidth="0.5" lineColor="#000000"/>
@@ -218,7 +272,7 @@
 				<text><![CDATA[APELLIDOS Y NOMBRES]]></text>
 			</staticText>
 			<staticText>
-				<reportElement mode="Transparent" x="359" y="0" width="51" height="20" forecolor="#000000" backcolor="#3399FF" uuid="e1649145-26c6-4999-bc64-3bcdaea65b7d"/>
+				<reportElement mode="Opaque" x="336" y="0" width="51" height="20" forecolor="#000000" backcolor="#C8C8C8" uuid="e1649145-26c6-4999-bc64-3bcdaea65b7d"/>
 				<box>
 					<pen lineColor="#000000"/>
 					<topPen lineWidth="0.5" lineColor="#000000"/>
@@ -236,7 +290,7 @@
 	<detail>
 		<band height="20" splitType="Prevent">
 			<textField pattern="HH:mm:ss" isBlankWhenNull="true">
-				<reportElement x="410" y="0" width="51" height="20" uuid="50383538-7c37-4226-b055-1765144cb136"/>
+				<reportElement x="387" y="0" width="51" height="20" uuid="50383538-7c37-4226-b055-1765144cb136"/>
 				<box>
 					<pen lineColor="#000000"/>
 					<topPen lineWidth="0.5" lineColor="#000000"/>
@@ -250,7 +304,7 @@
 				<textFieldExpression><![CDATA[$F{inicio}]]></textFieldExpression>
 			</textField>
 			<textField pattern="HH:mm:ss" isBlankWhenNull="true">
-				<reportElement x="461" y="0" width="51" height="20" uuid="a5c14ec0-9d9c-4ead-bed6-f541bf500bda"/>
+				<reportElement x="438" y="0" width="51" height="20" uuid="a5c14ec0-9d9c-4ead-bed6-f541bf500bda"/>
 				<box>
 					<pen lineColor="#000000"/>
 					<topPen lineWidth="0.5" lineColor="#000000"/>
@@ -264,7 +318,7 @@
 				<textFieldExpression><![CDATA[$F{fin}]]></textFieldExpression>
 			</textField>
 			<textField isBlankWhenNull="true">
-				<reportElement x="512" y="0" width="36" height="20" uuid="436b74ef-e346-44ac-ab01-ce8dbe4c20f5"/>
+				<reportElement x="489" y="0" width="36" height="20" uuid="436b74ef-e346-44ac-ab01-ce8dbe4c20f5"/>
 				<box>
 					<pen lineColor="#000000"/>
 					<topPen lineWidth="0.5" lineColor="#000000"/>
@@ -278,7 +332,7 @@
 				<textFieldExpression><![CDATA[$F{minutosTardanza}]]></textFieldExpression>
 			</textField>
 			<textField pattern="" isBlankWhenNull="true">
-				<reportElement x="359" y="0" width="51" height="20" uuid="40617959-9b3c-4475-ae57-3c99bcc93a83"/>
+				<reportElement x="336" y="0" width="51" height="20" uuid="40617959-9b3c-4475-ae57-3c99bcc93a83"/>
 				<box>
 					<pen lineColor="#000000"/>
 					<topPen lineWidth="0.5" lineColor="#000000"/>
@@ -292,7 +346,7 @@
 				<textFieldExpression><![CDATA[$F{motivo}]]></textFieldExpression>
 			</textField>
 			<textField isBlankWhenNull="true">
-				<reportElement x="548" y="0" width="37" height="20" uuid="3f068367-f287-4ebf-883d-1dbbf05e52bd">
+				<reportElement x="525" y="0" width="37" height="20" uuid="3f068367-f287-4ebf-883d-1dbbf05e52bd">
 					<printWhenExpression><![CDATA[$P{mostrar_he}]]></printWhenExpression>
 				</reportElement>
 				<box>
@@ -308,7 +362,7 @@
 				<textFieldExpression><![CDATA[$F{minutosExtra}]]></textFieldExpression>
 			</textField>
 			<textField pattern="dd/MM/yyyy">
-				<reportElement x="232" y="0" width="47" height="20" uuid="25ce2902-852d-44d2-9865-805bcc62f7de"/>
+				<reportElement x="209" y="0" width="47" height="20" uuid="25ce2902-852d-44d2-9865-805bcc62f7de"/>
 				<box>
 					<pen lineColor="#000000"/>
 					<topPen lineWidth="0.5" lineColor="#000000"/>
@@ -322,7 +376,7 @@
 				<textFieldExpression><![CDATA[$F{fecha}]]></textFieldExpression>
 			</textField>
 			<textField pattern="">
-				<reportElement x="279" y="0" width="80" height="20" uuid="7d510a9d-74af-4cdb-983b-ec4d813fec8f"/>
+				<reportElement x="256" y="0" width="80" height="20" uuid="7d510a9d-74af-4cdb-983b-ec4d813fec8f"/>
 				<box>
 					<pen lineColor="#000000"/>
 					<topPen lineWidth="0.5" lineColor="#000000"/>
@@ -338,7 +392,8 @@
 ? "ASIST. REGULAR" : $F{tipoAsistencia}.equals("T")
 ? "TARDANZA" : $F{tipoAsistencia}.equals("P")
 ? "PERMISO" : $F{tipoAsistencia}.equals("V")
-? "VACACIONES - " : ""]]></textFieldExpression>
+? "VACACIONES - " : $F{tipoAsistencia}.equals("E")
+? "FERIADO" : ""]]></textFieldExpression>
 			</textField>
 			<textField pattern="">
 				<reportElement x="0" y="0" width="53" height="20" uuid="632283a3-41f1-4bcd-8f4f-b9807bb789fa"/>
@@ -355,7 +410,7 @@
 				<textFieldExpression><![CDATA[$F{empleado.nroDocumento}]]></textFieldExpression>
 			</textField>
 			<textField pattern="">
-				<reportElement x="53" y="0" width="179" height="20" uuid="d4dde678-3c61-4bb1-8588-dbdcd6e46146"/>
+				<reportElement x="53" y="0" width="156" height="20" uuid="d4dde678-3c61-4bb1-8588-dbdcd6e46146"/>
 				<box>
 					<pen lineColor="#000000"/>
 					<topPen lineWidth="0.5" lineColor="#000000"/>
